@@ -1,3 +1,8 @@
+2016-11-04  Eli Zaretskii  <eliz@gnu.org>
+
+	* gawkmisc.pc (w32_maybe_set_errno) [__MINGW32__]: New function,
+	to correct errno when it is not set to a useful value.
+
 2016-09-24  Eli Zaretskii  <eliz@gnu.org>
 
 	Fix compilation warnings on MinGW with the latest runtime.
